# fastwhisper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README.zh.md  dev.sh  docker-compose.yml  pyproject.toml  requirements-local.txt  requirements-test.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_worker_leases.py  003_task_observability.py  004_asr_engine.py
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/: router.py  tasks.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  task.py
app/schemas/: task.py
app/services/: __init__.py  aligner_service.py  asr_factory.py  diarization_service.py  llm_service.py  sensevoice_service.py  task_service.py  whisper_service.py
app/workers/: processor.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  router.js  style.css
frontend/src/api/: index.js
frontend/src/components/: Layout.vue  MinutesView.vue  ProgressCard.vue  TaskList.vue  TranscriptView.vue  UploadCard.vue
frontend/src/composables/: useLocale.js
frontend/src/stores/: task.js
frontend/src/views/: Dashboard.vue  Home.vue  NewTask.vue  TaskDetail.vue  TaskList.vue
tests/: conftest.py  test_aligner_service.py  test_api_tasks.py  test_config.py  test_diarization_service.py  test_llm_service.py  test_task_service.py
