[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastwhisper"
version = "0.1.0"
description = "Recording-to-meeting-minutes service powered by Whisper, pyannote, and LLMs."
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
